# mnn_demo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/mnn_mnist/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  get_result.cpp  get_result.h  native-lib.cpp
app/src/main/java/com/example/mnn_mnist/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mnn_mnist/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
